Track nearest non-removed ancestor of mouse pressed node.

When the mouse press node is removed, we should still send keyboard scrolls to the nearest still connected ancestor as the user still conceptually last clicked within this ancestor.

Bug: 620309, 1320396
Change-Id: I224a2ff3a4bd18db46d547ef6c9bdd18bce3a38f
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3640528
Reviewed-by: Mustaq Ahmed <mustaq@chromium.org>
Commit-Queue: Robert Flack <flackr@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1002332}